Mise en forme du code

--- a/pages/menu1.html
+++ b/pages/menu1.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, inital-scale=1.0">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> /
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
     <title>OhMyFood - La palette du goût</title>
 </head>
@@ -24,162 +24,163 @@
             </a>
             <div id="header-logo">
                 <img id="logo" src="../Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
-                </div>
+            </div>
         </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-            <img src="../Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Background image">
+            <img src="../Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="Background image">
         </div>
         <div class="menu">
             <div class="menu-title">
                 <h1>La palette du goût</h1>
                 <div class="hearts">
-                <div class="heartbase__menu">
-                <i class="fa-regular fa-heart"></i>
-                </div>
-                <div class="heartbg__menu">
-                <i class="fa-solid fa-heart"></i>
-                </div>
+                    <div class="heartbase__menu">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="heartbg__menu">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </div>
             <div class="menu-section--wrapper">
-            <div class="menu-section menu-section--0">
-                <div class="menu-section-title">
-                    <h4>ENTREES</h4>
-                    <div class="borderbottom"></div>
-                </div>
+                <div class="menu-section menu-section--0">
+                    <div class="menu-section-title">
+                        <h4>ENTREES</h4>
+                        <div class="borderbottom"></div>
+                    </div>
 
-                <div class="menu-item menu-item--1">
-                    <div class="container-name">
-                        <p class="item-name">Fricassée d'escargot</p>
-                        <p>Au piment d'Espelette </p>
+                    <div class="menu-item menu-item--1">
+                        <div class="container-name">
+                            <p class="item-name">Fricassée d'escargot</p>
+                            <p>Au piment d'Espelette </p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">25€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">25€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-                
-                <div class="menu-item menu-item--2">
 
-                    <div class="container-name">
-                        <p class="item-name">Foie gras de canard mi-cuit</p>
-                        <p>Et ses copeaux de truffe noire</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">35€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-                <div class="menu-item menu-item--3">
+                    <div class="menu-item menu-item--2">
 
-                    <div class="container-name">
-                        <p class="item-name">Oeuf au plat</p>
-                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                        <div class="container-name">
+                            <p class="item-name">Foie gras de canard mi-cuit</p>
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">35€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">20€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-section menu-section--1">
-                <div class="menu-section-title">
-                    <h4>PLATS</h4>
-                    <div class="borderbottom"></div>
-                </div>
-                <div class="menu-item menu-item--4">
+                    <div class="menu-item menu-item--3">
 
-                    <div class="container-name">
-                        <p class="item-name">Filet de boeuf aux herbes</p>
-                        <p>Accompagné de sa ribambelle de légumes</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">40€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                        <div class="container-name">
+                            <p class="item-name">Oeuf au plat</p>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">20€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="menu-item menu-item--5">
+                <div class="menu-section menu-section--1">
+                    <div class="menu-section-title">
+                        <h4>PLATS</h4>
+                        <div class="borderbottom"></div>
+                    </div>
+                    <div class="menu-item menu-item--4">
 
-                    <div class="container-name">
-                        <p class="item-name">Parmentier de queue de boeuf</p>
-                        <p>À la truffe noire sur sa purée de panais</p>
+                        <div class="container-name">
+                            <p class="item-name">Filet de boeuf aux herbes</p>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">40€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">35€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-                <div class="menu-item menu-item--6">
+                    <div class="menu-item menu-item--5">
 
-                    <div class="container-name">
-                        <p class="item-name">Filet de turbot</p>
-                        <p>Aux agrumes</p>
+                        <div class="container-name">
+                            <p class="item-name">Parmentier de queue de boeuf</p>
+                            <p>À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">35€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">44€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-section menu-section--2">
-                <div class="menu-section-title">
-                    <h4>DESSERTS</h4>
-                    <div class="borderbottom"></div>
-                </div>
-                <div class="menu-item menu-item--7">
+                    <div class="menu-item menu-item--6">
 
-                    <div class="container-name">
-                        <p class="item-name">Paris-Brest</p>
-                        <p>Revisité</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">18€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                        <div class="container-name">
+                            <p class="item-name">Filet de turbot</p>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">44€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="menu-item menu-item--8">
+                <div class="menu-section menu-section--2">
+                    <div class="menu-section-title">
+                        <h4>DESSERTS</h4>
+                        <div class="borderbottom"></div>
+                    </div>
+                    <div class="menu-item menu-item--7">
 
-                    <div class="container-name">
-                        <p class="item-name">Macaron au chocolat d'exception </p>
-                        <p>Et glace à la vanille de Madagascar</p>
+                        <div class="container-name">
+                            <p class="item-name">Paris-Brest</p>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">18€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">22€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-                <div class="menu-item menu-item--9">
+                    <div class="menu-item menu-item--8">
 
-                    <div class="container-name">
-                        <p class="item-name">Mousse au chocolat </p>
-                        <p>Au piment d'Espelette et à la truffe noire</p>
+                        <div class="container-name">
+                            <p class="item-name">Macaron au chocolat d'exception </p>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">22€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">23€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--9">
+
+                        <div class="container-name">
+                            <p class="item-name">Mousse au chocolat </p>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">23€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
             <button class="btn">Commander</button>
         </div>
@@ -188,15 +189,19 @@
         <img id="logosmall" src="../Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
-            <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
-            <p>Proposer un restaurant</p>
-        </div>
-        <div class="footerdiv">
-            <i class="fa-solid fa-handshake-angle"></i> <!--icone serrage de mains-->
-            <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+                <i class="fa-solid fa-utensils"></i>
+                <!--icone fourchette-->
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footerdiv">
+                <i class="fa-solid fa-handshake-angle"></i>
+                <!--icone serrage de mains-->
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="mailto:contact@ohmyfood.fr">
+                <p>Contact</p>
+            </a>
         </div>
     </footer>
 </body>
