--- a/pages/menu3.html
+++ b/pages/menu3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0" />
@@ -7,166 +8,169 @@
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap"
+        rel="stylesheet" />
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
-    <title>OhMyFood - </title>
+    <title>OhMyFood - A la française</title>
 </head>
+
 <body>
     <header>
         <div class="menu-header">
-        <a href="../index.html">
-            <div class="backarrow">
-                <i class="fa-solid fa-arrow-left"></i>
+            <a href="../index.html">
+                <div class="backarrow">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </div>
+            </a>
+            <div id="header-logo">
+                <img id="logo" src="../Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
             </div>
-        </a>
-        <div id="header-logo">
-            <img id="logo" src="../Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
-            </div>
-    </div>
+        </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-        <img src="../Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Background image">
+            <img src="../Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="Background image">
         </div>
         <div class="menu">
             <div class="menu-title">
                 <h1>À la française</h1>
                 <div class="hearts">
-                <div class="heartbase__menu">
-                <i class="fa-regular fa-heart"></i>
-                </div>
-                <div class="heartbg__menu">
-                <i class="fa-solid fa-heart"></i>
-                </div>
+                    <div class="heartbase__menu">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="heartbg__menu">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </div>
             <div class="menu-section--wrapper">
-            <div class="menu-section menu-section--0">
-                <div class="menu-section-title">
-                <h4>ENTREES</h4>
-                <div class="borderbottom"></div>
-                </div>
-                <div class="menu-item menu-item--1">
-                    <div class="container-name">
-                    <p class="item-name"><b>Tartare de poulpe acidulé</b></p>
-                    <p>Aux zestes d'orange</p>
+                <div class="menu-section menu-section--0">
+                    <div class="menu-section-title">
+                        <h4>ENTREES</h4>
+                        <div class="borderbottom"></div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">25€</p>
+                    <div class="menu-item menu-item--1">
+                        <div class="container-name">
+                            <p class="item-name"><b>Tartare de poulpe acidulé</b></p>
+                            <p>Aux zestes d'orange</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">25€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--2">
+                        <div class="container-name">
+                            <p class="item-name"><b>Velouté de légumes d'antan</b></p>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">35€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-item menu-item--2">
-                    <div class="container-name">
-                    <p class="item-name"><b>Velouté de légumes d'antan</b></p>
-                    <p>Carotte, panais, topinambour</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">35€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-                <div class="menu-item menu-item--3">
-                    <div class="container-name">
-                    <p class="item-name"><b>Soupe à l'oignon</b></p>
-                    <p>Revisitée</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">20€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-section menu-section--1">
-                <div class="menu-section-title">
-                <h4>PLATS</h4>
-                <div class="borderbottom"></div>
-                </div>
-                <div class="menu-item menu-item--4">
-                    <div class="container-name">
-                    <p class="item-name"><b>Coquilles Saint-Jacques</b></p>
-                    <p>Accompagnées d'une purée de panais</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">40€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--3">
+                        <div class="container-name">
+                            <p class="item-name"><b>Soupe à l'oignon</b></p>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">20€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="menu-item menu-item--5">
-                    <div class="container-name">
-                    <p class="item-name"><b>Magret de canard</b></p>
-                    <p>Et parmentier de pommes de terre</p>
+                <div class="menu-section menu-section--1">
+                    <div class="menu-section-title">
+                        <h4>PLATS</h4>
+                        <div class="borderbottom"></div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">35€</p>
+                    <div class="menu-item menu-item--4">
+                        <div class="container-name">
+                            <p class="item-name"><b>Coquilles Saint-Jacques</b></p>
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">40€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--5">
+                        <div class="container-name">
+                            <p class="item-name"><b>Magret de canard</b></p>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">35€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-item menu-item--6">
-                    <div class="container-name">
-                    <p class="item-name"><b>Pigeonneau d’Ille-et-Vilaine</b></p>
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">44€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-section menu-section--2">
-                <div class="menu-section-title">
-                <h4>DESSERTS</h4>
-                <div class="borderbottom"></div>
-                </div>
-                <div class="menu-item menu-item--7">
-                    <div class="container-name">
-                    <p class="item-name"><b>Pétales de violettes glacés</b></p>
-                    <p>Et purée de noisettes</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">18€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>                  
-                </div>
-                <div class="menu-item menu-item--8">
-                    <div class="container-name">
-                    <p class="item-name"><b>Fondant au chocolat</b></p>
-                    <p>Revisité</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">22€</p> 
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>                  
-                </div>
-                <div class="menu-item menu-item--9">
-                    <div class="container-name">
-                    <p class="item-name"><b>Millefeuille croustillant</b></p>
-                    <p>Myrtilles et pâte d’amande</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">23€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--6">
+                        <div class="container-name">
+                            <p class="item-name"><b>Pigeonneau d’Ille-et-Vilaine</b></p>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">44€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+                <div class="menu-section menu-section--2">
+                    <div class="menu-section-title">
+                        <h4>DESSERTS</h4>
+                        <div class="borderbottom"></div>
+                    </div>
+                    <div class="menu-item menu-item--7">
+                        <div class="container-name">
+                            <p class="item-name"><b>Pétales de violettes glacés</b></p>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">18€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
+                    </div>
+                    <div class="menu-item menu-item--8">
+                        <div class="container-name">
+                            <p class="item-name"><b>Fondant au chocolat</b></p>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">22€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
+                    </div>
+                    <div class="menu-item menu-item--9">
+                        <div class="container-name">
+                            <p class="item-name"><b>Millefeuille croustillant</b></p>
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">23€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
             <button class="btn">Commander</button>
         </div>
@@ -175,15 +179,19 @@
         <img id="logosmall" src="../Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
-            <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
-            <p>Proposer un restaurant</p>
-        </div>
-        <div class="footerdiv">
-            <i class="fa-solid fa-handshake-angle"></i> <!--icone serrage de mains-->
-            <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+                <i class="fa-solid fa-utensils"></i>
+                <!--icone fourchette-->
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footerdiv">
+                <i class="fa-solid fa-handshake-angle"></i>
+                <!--icone serrage de mains-->
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="mailto:contact@ohmyfood.fr">
+                <p>Contact</p>
+            </a>
         </div>
     </footer>
 </body>
