--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
@@ -11,6 +12,7 @@
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
     <title>OhMyFood</title>
 </head>
+
 <body>
     <!-- Loading spinner -->
     <div id="overlay">
@@ -25,23 +27,24 @@
     <!-- Header -->
     <header>
         <div class="menu-header">
-        <div id="header-logo">
-        <img id="logo" src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
-        </div>
+            <div id="header-logo">
+                <img id="logo" src="Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
+            </div>
         </div>
     </header>
     <main>
         <!-- Section 1/3 -->
         <section>
             <div id="location">
-                <i class="fa-solid fa-location-dot"></i> <!--icone GPS-->
+                <i class="fa-solid fa-location-dot"></i>
+                <!--icone GPS-->
                 <p>Paris, Belleville</p>
             </div>
             <div id="main-header">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <div>
-                <button class="btn">Explorer nos restaurants</button>
+                    <button class="btn">Explorer nos restaurants</button>
                 </div>
             </div>
         </section>
@@ -51,21 +54,21 @@
             <div id="fonctionnement">
                 <h2>Fonctionnement</h2>
                 <div class="steps--wrapper">
-                <div class="steps">
-                    <p class="number">1</p>
-                    <i class="fa-solid fa-mobile-screen-button"></i>
-                    <p>Choisissez votre restaurant</p>
-                </div>
-                <div class="steps">
-                    <p class="number">2</p>
-                    <i class="fa-solid fa-bars"></i>
-                    <p>Composez votre menu</p>
-                </div>
-                <div class="steps">
-                    <p class="number">3</p>
-                    <i class="fa-solid fa-store"></i>
-                    <p>Dégustez au restaurant</p>
-                </div>
+                    <div class="steps">
+                        <p class="number">1</p>
+                        <i class="fa-solid fa-mobile-screen-button"></i>
+                        <p>Choisissez votre restaurant</p>
+                    </div>
+                    <div class="steps">
+                        <p class="number">2</p>
+                        <i class="fa-solid fa-bars"></i>
+                        <p>Composez votre menu</p>
+                    </div>
+                    <div class="steps">
+                        <p class="number">3</p>
+                        <i class="fa-solid fa-store"></i>
+                        <p>Dégustez au restaurant</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -75,77 +78,85 @@
             <div id="restaurants">
                 <h2>Restaurants</h2>
                 <div class="restaurants--wrapper">
-                <a href="pages/menu1.html">
-                <div class="resto-card">
-                    <div class="card-img-div">
-                    <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                    </div>
-                    <div class="textcontainer">
-                    <p><b>La palette du goût</b></p>
-                    <p>Ménilmontant</p>
-                    <div class="heartbase">
-                    <i class="fa-regular fa-heart"></i>
-                    </div>
-                    <div class="heartbg">
-                    <i class="fa-solid fa-heart"></i>
-                    </div>
-                    </div>
-                </div>
-                </a>
+                    <a href="pages/menu1.html">
+                        <div class="resto-card">
+                            <div class="card-img-div">
+                                <img class="card-img"
+                                    src="Maquettes_Ohmyfood/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                                    alt="La palette du goût">
+                            </div>
+                            <div class="textcontainer">
+                                <p><b>La palette du goût</b></p>
+                                <p>Ménilmontant</p>
+                                <div class="heartbase">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>
+                                <div class="heartbg">
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
 
-                <a href="pages/menu2.html">
-                <div class="resto-card">
-                    <div class="card-img-div">
-                    <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                    </div>
-                    <div class="textcontainer">
-                    <p><b>La note enchantée</b></p>
-                    <p>Charonne</p>
-                    <div class="heartbase">
-                    <i class="fa-regular fa-heart"></i>
-                    </div>
-                    <div class="heartbg">
-                    <i class="fa-solid fa-heart"></i>
-                    </div>
-                    </div>
-                </div>
-                </a>
+                    <a href="pages/menu2.html">
+                        <div class="resto-card">
+                            <div class="card-img-div">
+                                <img class="card-img"
+                                    src="Maquettes_Ohmyfood/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                                    alt="La note enchantée">
+                            </div>
+                            <div class="textcontainer">
+                                <p><b>La note enchantée</b></p>
+                                <p>Charonne</p>
+                                <div class="heartbase">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>
+                                <div class="heartbg">
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
 
-                <a href="pages/menu3.html">
-                <div class="resto-card">
-                    <div class="card-img-div">
-                    <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française">
-                    </div>
-                    <div class="textcontainer">
-                    <p><b>À la française</b></p>
-                    <p>Cité Rouge</p>
-                    <div class="heartbase">
-                    <i class="fa-regular fa-heart"></i>
-                    </div>
-                    <div class="heartbg">
-                    <i class="fa-solid fa-heart"></i>
-                    </div>
-                    </div>
-                </div>
-                </a>
+                    <a href="pages/menu3.html">
+                        <div class="resto-card">
+                            <div class="card-img-div">
+                                <img class="card-img"
+                                    src="Maquettes_Ohmyfood/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                                    alt="À la française">
+                            </div>
+                            <div class="textcontainer">
+                                <p><b>À la française</b></p>
+                                <p>Cité Rouge</p>
+                                <div class="heartbase">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>
+                                <div class="heartbg">
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
 
-                <a href="pages/menu4.html">
-                <div class="resto-card">
-                    <div class="card-img-div">
-                    <img class="card-img" src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
-                    </div>
-                    <div class="textcontainer">
-                    <p><b>Le délice des sens</b></p>
-                    <p>Folie-Méricourt</p>
-                    <div class="heartbase">
-                    <i class="fa-regular fa-heart"></i>
-                    </div>
-                    <div class="heartbg">
-                    <i class="fa-solid fa-heart"></i>
-                    </div>
-                    </div>
-                </div>
-                </a>
+                    <a href="pages/menu4.html">
+                        <div class="resto-card">
+                            <div class="card-img-div">
+                                <img class="card-img"
+                                    src="Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                    alt="Le délice des sens">
+                            </div>
+                            <div class="textcontainer">
+                                <p><b>Le délice des sens</b></p>
+                                <p>Folie-Méricourt</p>
+                                <div class="heartbase">
+                                    <i class="fa-regular fa-heart"></i>
+                                </div>
+                                <div class="heartbg">
+                                    <i class="fa-solid fa-heart"></i>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </section>
@@ -155,15 +166,19 @@
         <img id="logosmall" src="Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
-            <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
-            <p>Proposer un restaurant</p>
-        </div>
-        <div class="footerdiv">
-            <i class="fa-solid fa-handshake-angle"></i> <!--icone serrage de mains-->
-            <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+                <i class="fa-solid fa-utensils"></i>
+                <!--icone fourchette-->
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footerdiv">
+                <i class="fa-solid fa-handshake-angle"></i>
+                <!--icone serrage de mains-->
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="mailto:contact@ohmyfood.fr">
+                <p>Contact</p>
+            </a>
         </div>
     </footer>
 </body>
