--- a/pages/menu4.html
+++ b/pages/menu4.html
@@ -1,172 +1,176 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, inital-scale=1.0">
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, inital-scale=1.0" />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&family=Shrikhand&display=swap"
+        rel="stylesheet" />
     <script src="https://kit.fontawesome.com/41e6cde086.js" crossorigin="anonymous"></script>
-    <title>OhMyFood - </title>
+    <title>OhMyFood - Le délice des sens</title>
 </head>
+
 <body>
     <header>
         <div class="menu-header">
-        <a href="../index.html">
-            <div class="backarrow">
-                <i class="fa-solid fa-arrow-left"></i>
+            <a href="../index.html">
+                <div class="backarrow">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </div>
+            </a>
+            <div id="header-logo">
+                <img id="logo" src="../Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
             </div>
-        </a>
-        <div id="header-logo">
-            <img id="logo" src="../Maquettes_Ohmyfood/images/logo/ohmyfood.png" alt="Logo">
-            </div>
-    </div>
+        </div>
     </header>
     <main id="menu-main">
         <div class="menu-img">
-        <img src="../Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Background image">
+            <img src="../Maquettes_Ohmyfood/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="Background image">
         </div>
         <div class="menu">
             <div class="menu-title">
                 <h1>Le délice des sens</h1>
                 <div class="hearts">
-                <div class="heartbase__menu">
-                <i class="fa-regular fa-heart"></i>
-                </div>
-                <div class="heartbg__menu">
-                <i class="fa-solid fa-heart"></i>
-                </div>
+                    <div class="heartbase__menu">
+                        <i class="fa-regular fa-heart"></i>
+                    </div>
+                    <div class="heartbg__menu">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
                 </div>
             </div>
             <div class="menu-section--wrapper">
-            <div class="menu-section menu-section--0">
-                <div class="menu-section-title">
-                <h4>ENTREES</h4>
-                <div class="borderbottom"></div>
-                </div>
-                <div class="menu-item menu-item--1">
-                    <div class="container-name">
-                    <p class="item-name"><b>Tartare de thon</b></p>
-                    <p>Assaisonné au yuzu</p>
+                <div class="menu-section menu-section--0">
+                    <div class="menu-section-title">
+                        <h4>ENTREES</h4>
+                        <div class="borderbottom"></div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">25€</p>
+                    <div class="menu-item menu-item--1">
+                        <div class="container-name">
+                            <p class="item-name"><b>Tartare de thon</b></p>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">25€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--2">
+                        <div class="container-name">
+                            <p class="item-name"><b>Bouchée de homard croustillant </b></p>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">35€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-item menu-item--2">
-                    <div class="container-name">
-                    <p class="item-name"><b>Bouchée de homard croustillant </b></p>
-                    <p>Et sa farandole de petits légumes</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">35€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-                <div class="menu-item menu-item--3">
-                    <div class="container-name">
-                    <p class="item-name"><b>Velouté de cèpes </b></p>
-                    <p>Aux truffes</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">20€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-section menu-section--1">
-                <div class="menu-section-title">
-                <h4>PLATS</h4>
-                <div class="borderbottom"></div>
-                </div>
-                <div class="menu-item menu-item--4">
-                    <div class="container-name">
-                    <p class="item-name"><b>Poulet rôti aux herbes de Provence</b></p>
-                    <p>Et sa crème de truffe</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">40€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--3">
+                        <div class="container-name">
+                            <p class="item-name"><b>Velouté de cèpes </b></p>
+                            <p>Aux truffes</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">20€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="menu-item menu-item--5">
-                    <div class="container-name">
-                    <p class="item-name"><b>Langouste rôtie</b></p>
-                    <p>Et ses légumes de saison</p>
+                <div class="menu-section menu-section--1">
+                    <div class="menu-section-title">
+                        <h4>PLATS</h4>
+                        <div class="borderbottom"></div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">35€</p>
+                    <div class="menu-item menu-item--4">
+                        <div class="container-name">
+                            <p class="item-name"><b>Poulet rôti aux herbes de Provence</b></p>
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">40€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--5">
+                        <div class="container-name">
+                            <p class="item-name"><b>Langouste rôtie</b></p>
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">35€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-item menu-item--6">
-                    <div class="container-name">
-                    <p class="item-name"><b>Côte de boeuf Angus</b></p>
-                    <p>Et sa purée de panais</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">44€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-section menu-section--2">
-                <div class="menu-section-title">
-                <h4>DESSERTS</h4>
-                <div class="borderbottom"></div>
-                </div>
-                <div class="menu-item menu-item--7">
-                    <div class="container-name">
-                    <p class="item-name"><b>Farandole de desserts</b></p>
-                    <p>Du chef</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">18€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
-                    </div>
-                </div>
-                <div class="menu-item menu-item--8">
-                    <div class="container-name">
-                    <p class="item-name"><b>Crème brulée</b></p>
-                    <p>Revisitée</p>
-                    </div>
-                    <div class="container-price">
-                        <p class="prix">22€</p>
-                    </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--6">
+                        <div class="container-name">
+                            <p class="item-name"><b>Côte de boeuf Angus</b></p>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">44€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
                 </div>
-                <div class="menu-item menu-item--9">
-                    <div class="container-name">
-                    <p class="item-name"><b>Tiramisu</b></p>
-                    <p>À la noisette</p>
+                <div class="menu-section menu-section--2">
+                    <div class="menu-section-title">
+                        <h4>DESSERTS</h4>
+                        <div class="borderbottom"></div>
                     </div>
-                    <div class="container-price">
-                        <p class="prix">23€</p>
+                    <div class="menu-item menu-item--7">
+                        <div class="container-name">
+                            <p class="item-name"><b>Farandole de desserts</b></p>
+                            <p>Du chef</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">18€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
-                    <div class="checkmark">
-                        <i class="fa-regular fa-circle-check fa-lg"></i>
+                    <div class="menu-item menu-item--8">
+                        <div class="container-name">
+                            <p class="item-name"><b>Crème brulée</b></p>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">22€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
+                    </div>
+                    <div class="menu-item menu-item--9">
+                        <div class="container-name">
+                            <p class="item-name"><b>Tiramisu</b></p>
+                            <p>À la noisette</p>
+                        </div>
+                        <div class="container-price">
+                            <p class="prix">23€</p>
+                        </div>
+                        <div class="checkmark">
+                            <i class="fa-regular fa-circle-check fa-lg"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
             <button class="btn">Commander</button>
         </div>
@@ -175,15 +179,19 @@
         <img id="logosmall" src="../Maquettes_Ohmyfood/images/logo/ohmyfood@2xwhite.png" alt="Logo small">
         <div class="footer__txt">
             <div class="footerdiv">
-            <i class="fa-solid fa-utensils"></i> <!--icone fourchette-->
-            <p>Proposer un restaurant</p>
-        </div>
-        <div class="footerdiv">
-            <i class="fa-solid fa-handshake-angle"></i> <!--icone serrage de mains-->
-            <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+                <i class="fa-solid fa-utensils"></i>
+                <!--icone fourchette-->
+                <p>Proposer un restaurant</p>
+            </div>
+            <div class="footerdiv">
+                <i class="fa-solid fa-handshake-angle"></i>
+                <!--icone serrage de mains-->
+                <p>Devenir partenaire</p>
+            </div>
+            <p>Mentions légales</p>
+            <a href="mailto:contact@ohmyfood.fr">
+                <p>Contact</p>
+            </a>
         </div>
     </footer>
 </body>
